[package]
name = "bitcoincash-addr"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/rust-bitcoincash-addr"
repository = "https://github.com/hlb8122/rust-bitcoincash-addr"
description = """
A simple library providing an `Address` struct enabling encoding/decoding of Bitcoin Cash addresses.
"""
keywords = ["bitcoin", "cash", "cashaddr", "address", "base58"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "hlb8122/rust-bitcoincash-addr" }

[dependencies]
rust-base58 = "*"
bitcoin_hashes = "*"

[dev-dependencies]
hex = "*"
